[Revert] JDK8语法支持修正，设配机器环境