@@ -22,6 +22,7 @@ import org.apache.amoro.client.AmsServerInfo;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.CountDownLatch;
 
@@ -54,7 +55,7 @@ public class NoopHighAvailabilityContainer implements HighAvailabilityContainer 
 
   @Override
   public List<AmsServerInfo> getAliveNodes() {
-    return List.of();
+    return Collections.emptyList();
   }
 
   @Override
